// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lightningcss-loader > should register lightningcss-loader and disable postcss-loader when lightningcssLoader enabled 1`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "errorRecovery": true,
          "targets": [
            "> 0.01%",
            "not dead",
            "not op_mini all",
          ],
        },
      },
    ],
  },
  {
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 1,
          "modules": false,
          "sourceMap": true,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "errorRecovery": true,
          "targets": [
            "> 0.01%",
            "not dead",
            "not op_mini all",
          ],
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.css\\$/,
    "type": "asset/source",
  },
]
`;

exports[`lightningcss-loader > should register lightningcss-loader and postcss-loader both 1`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "errorRecovery": true,
          "targets": [
            "> 0.01%",
            "not dead",
            "not op_mini all",
          ],
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 2,
          "modules": false,
          "sourceMap": true,
        },
      },
      {
        "loader": "builtin:lightningcss-loader",
        "options": {
          "errorRecovery": true,
          "targets": [
            "> 0.01%",
            "not dead",
            "not op_mini all",
          ],
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.css\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 1`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 1,
          "modules": false,
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.css\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 2`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 3,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/resolve-url-loader/index.js",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/sass-loader/index.js",
        "options": {
          "api": "modern-compiler",
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/sass-embedded/dist/lib/index.js",
          "sassOptions": {
            "quietDeps": true,
            "silenceDeprecations": [
              "import",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "type": "asset/source",
  },
  {
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 3,
          "modules": false,
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/resolve-url-loader/index.js",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/sass-loader/index.js",
        "options": {
          "api": "modern-compiler",
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/sass-embedded/dist/lib/index.js",
          "sassOptions": {
            "quietDeps": true,
            "silenceDeprecations": [
              "import",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should allow tools.postcss to override the plugins 3`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "node_modules",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.less\\$/,
    "type": "asset/source",
  },
  {
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 2,
          "modules": false,
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
              {
                "AtRule": {},
                "postcssPlugin": "postcss-plugin-test",
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "node_modules",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 1`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 1,
          "modules": false,
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.css\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 2`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 3,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/resolve-url-loader/index.js",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/sass-loader/index.js",
        "options": {
          "api": "modern-compiler",
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/sass-embedded/dist/lib/index.js",
          "sassOptions": {
            "quietDeps": true,
            "silenceDeprecations": [
              "import",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "type": "asset/source",
  },
  {
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 3,
          "modules": false,
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/resolve-url-loader/index.js",
        "options": {
          "join": [Function],
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-sass/compiled/sass-loader/index.js",
        "options": {
          "api": "modern-compiler",
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/sass-embedded/dist/lib/index.js",
          "sassOptions": {
            "quietDeps": true,
            "silenceDeprecations": [
              "import",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin by browserslist 3`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/core/dist/cssExtractLoader.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 2,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "node_modules",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.less\\$/,
    "type": "asset/source",
  },
  {
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.less\\$/,
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 2,
          "modules": false,
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "chrome >= 87",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-less/compiled/less/index.js",
          "lessOptions": {
            "javascriptEnabled": true,
            "paths": [
              "node_modules",
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin correctly when injectStyles is enabled in dev environment 1`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/style-loader/index.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 1,
          "modules": false,
          "sourceMap": true,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": true,
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.css\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-postcssLegacy > should register postcss plugin correctly when injectStyles is enabled in production environment 1`] = `
[
  {
    "dependency": {
      "not": "url",
    },
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": {
      "not": [
        /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
        /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
      ],
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/style-loader/index.js",
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              Processor {
                "plugins": [
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-discard-comments",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-minify-gradients",
                  },
                  {
                    "postcssPlugin": "postcss-reduce-initial",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-svgo",
                  },
                  {
                    "postcssPlugin": "postcss-normalize-display-values",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-reduce-transforms",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-colormin",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-timing-functions",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-calc",
                  },
                  {
                    "postcssPlugin": "postcss-convert-values",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-ordered-values",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-minify-selectors",
                  },
                  {
                    "postcssPlugin": "postcss-minify-params",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-charset",
                  },
                  {
                    "postcssPlugin": "postcss-discard-overridden",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-string",
                  },
                  {
                    "postcssPlugin": "postcss-normalize-unicode",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-minify-font-values",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-normalize-repeat-style",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-positions",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-whitespace",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-discard-duplicates",
                  },
                  {
                    "postcssPlugin": "postcss-merge-rules",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-discard-empty",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-unique-selectors",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "css-declaration-sorter",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "cssnano-util-raw-cache",
                  },
                ],
                "version": "8.5.6",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": false,
        },
      },
    ],
  },
  {
    "resolve": {
      "preferRelative": true,
    },
    "resourceQuery": /\\[\\?&\\]inline\\(\\?:&\\|=\\|\\$\\)/,
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/css-loader/index.js",
        "options": {
          "exportType": "string",
          "importLoaders": 1,
          "modules": false,
          "sourceMap": false,
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss-loader/index.js",
        "options": {
          "implementation": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/core/compiled/postcss/index.js",
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "Once": [Function],
                "postcssPlugin": "postcss-flexbugs-fixes",
              },
              {
                "postcssPlugin": "postcss-custom-properties",
                "prepare": [Function],
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-initial",
              },
              {
                "Declaration": [Function],
                "postcssPlugin": "postcss-page-break",
              },
              {
                "Once": [Function],
                "postcssPlugin": "postcss-font-variant",
              },
              {
                "AtRule": {
                  "custom-media": [Function],
                  "media": [Function],
                },
                "postcssPlugin": "postcss-media-minmax",
              },
              {
                "Rule": [Function],
                "postcssPlugin": "postcss-nesting",
              },
              Processor {
                "plugins": [
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-discard-comments",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-minify-gradients",
                  },
                  {
                    "postcssPlugin": "postcss-reduce-initial",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-svgo",
                  },
                  {
                    "postcssPlugin": "postcss-normalize-display-values",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-reduce-transforms",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-colormin",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-timing-functions",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-calc",
                  },
                  {
                    "postcssPlugin": "postcss-convert-values",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-ordered-values",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-minify-selectors",
                  },
                  {
                    "postcssPlugin": "postcss-minify-params",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-charset",
                  },
                  {
                    "postcssPlugin": "postcss-discard-overridden",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-string",
                  },
                  {
                    "postcssPlugin": "postcss-normalize-unicode",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-minify-font-values",
                    "prepare": [Function],
                  },
                  {
                    "postcssPlugin": "postcss-normalize-repeat-style",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-positions",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-normalize-whitespace",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-discard-duplicates",
                  },
                  {
                    "postcssPlugin": "postcss-merge-rules",
                    "prepare": [Function],
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-discard-empty",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "postcss-unique-selectors",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "css-declaration-sorter",
                  },
                  {
                    "OnceExit": [Function],
                    "postcssPlugin": "cssnano-util-raw-cache",
                  },
                ],
                "version": "8.5.6",
              },
              {
                "browsers": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "> 0.01%",
                    "not dead",
                    "not op_mini all",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": false,
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.css\\$/,
    "type": "asset/source",
  },
]
`;
